--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,6 @@
 // Font family
 $font-family-fallback: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$font-family-global: Roboto, $font-family-fallback;
+$font-family-global: 'Satisfy', $font-family-fallback;
 
 $colors: (
   'background':     rgba(255, 255, 255, 1),
