--- a/src/components/timeline/timeline.scss
+++ b/src/components/timeline/timeline.scss
@@ -4,16 +4,51 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-
+  height: auto;
+  
   background-color: #000;
 
   &__content {
-    position: absolute;
-    top: 0;
-    left: 0;
-
     width: 100%;
-    height: 100%;
     min-height: 100vh;
+    height: auto;
+
+    &__item {
+      position: relative;
+      color: white;
+
+      &:not(last-item) {
+        padding: 30px;
+      }
+
+      &__image {
+        position: relative;
+        width: 200px;
+        height: 200px;
+
+        text-align: center;
+
+        &__asset {
+          display: inline-block;
+
+          width: 200px;
+          height: 200px;
+          border-radius: 50%;
+
+          background-position: center center;
+          background-repeat: no-repeat;
+          background-size: cover;
+          background-color: gray;
+        }
+      }
+
+      &__title {
+        position: relative;
+      }
+
+      &__description {
+        position: relative;
+      }
+    }
   }
 }
