--- a/src/components/couple-intro/couple-intro.scss
+++ b/src/components/couple-intro/couple-intro.scss
@@ -1,3 +1,10 @@
 .couple-intro {
+  position: relative;
 
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  height: auto;
+
+  background-color: white;
 }
