--- a/src/components/cover/cover.scss
+++ b/src/components/cover/cover.scss
@@ -1,83 +1,82 @@
 .cover {
   position: relative;
-
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+}
 
-  &__background {
-    position: absolute;
-    top: 0;
-    left: 0;
+.cover__background {
+  position: absolute;
+  top: 0;
+  left: 0;
 
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
 
-    background-image: url("../../assets/cover.jpg");
+  background-image: url("../../assets/cover.jpg");
 
-    /* Background image is centered vertically and horizontally at all times */
-    background-position: center center;
-    
-    /* Background image doesn't tile */
-    background-repeat: no-repeat;
-    
-    /* Background image is fixed in the viewport so that it doesn't move when 
-      the content's height is greater than the image's height */
-    background-attachment: fixed;
-    
-    /* This is what makes the background image rescale based
-      on the container's size */
-    background-size: cover;
-    
-    /* Set a background color that will be displayed
-      while the background image is loading */
-    background-color: #000;
-  }
+  /* Background image is centered vertically and horizontally at all times */
+  background-position: center center;
 
-  &__overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
+  /* Background image doesn't tile */
+  background-repeat: no-repeat;
 
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
+  /* Background image is fixed in the viewport so that it doesn't move when
+    the content's height is greater than the image's height */
+  background-attachment: fixed;
 
-    background: rgba(0, 0, 0, 0.3);
-  }
+  /* This is what makes the background image rescale based
+    on the container's size */
+  background-size: cover;
 
-  &__content {
-    position: absolute;
-    top: 0;
-    left: 0;
+  /* Set a background color that will be displayed
+    while the background image is loading */
+  background-color: #000;
+}
 
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
+.cover__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
 
-    &__metadata {
-      &__title {
-        text-align: center;
+  background: rgba(0, 0, 0, 0.3);
+}
 
-        color: white;
-        font-size: 60px;
-        text-shadow: 1px 1px 1px #000;
-        font-family: 'Satisfy', cursive;
-      }
+.cover__content {
+  position: absolute;
+  top: 0;
+  left: 0;
 
-      &__description {
-        text-align: center;
-        
-        color: white;
-        font-size: 30px;
-        text-shadow: 1px 1px 1px #000;
-        font-family: 'Caveat', cursive;
-      }
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &__metadata {
+    &__title {
+      text-align: center;
+
+      color: white;
+      font-size: 60px;
+      text-shadow: 1px 1px 1px #000;
+      font-family: 'Satisfy', cursive;
+    }
+
+    &__description {
+      text-align: center;
+
+      color: white;
+      font-size: 30px;
+      text-shadow: 1px 1px 1px #000;
+      font-family: 'Caveat', cursive;
     }
   }
 }
