Switch font type. Add DOM structure to couple info.

--- a/src/components/countdown/countdown.scss
+++ b/src/components/countdown/countdown.scss
@@ -24,7 +24,7 @@
   padding: 10px 0;
 
   font-size: 30px;
-  font-family: 'Satisfy', cursive;
+  font-family: "Satisfy", cursive;
   text-align: center;
 }
 
