--- a/src/components/timeline/timeline.scss
+++ b/src/components/timeline/timeline.scss
@@ -34,7 +34,7 @@
     color: white;
     font-size: 40px;
     text-shadow: 1px 1px 1px #000;
-    font-family: 'Satisfy', cursive;
+    font-family: "Caveat", cursive;
   }
 }
 
@@ -76,7 +76,7 @@
     color: white;
     font-size: 30px;
     text-shadow: 1px 1px 1px #000;
-    font-family: 'Satisfy', cursive;
+    font-family: "Alex Brush", cursive;
     padding-bottom: 20px;
   }
 
