--- a/src/components/couple-intro/couple-intro.scss
+++ b/src/components/couple-intro/couple-intro.scss
@@ -3,8 +3,81 @@
 
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
   min-height: 100vh;
   height: auto;
 
+  padding-top: 50px;
+
   background-color: white;
+}
+
+.couple-intro__couples {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+}
+
+.couple-intro__couples__couple {
+  display: inline-block;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: gray;
+
+  &--bride {
+    background-image: url("../../assets/cover.jpg");
+  }
+
+  &--groom {
+    background-image: url("../../assets/cover.jpg");
+  }
+}
+
+.couple-intro__couples__and {
+  padding-top: 28px;
+  padding-bottom: 20px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  text-align: center;
+
+  font-size: 80px;
+  text-shadow: 1px 1px 1px #000;
+  font-family: "Alex Brush", cursive;
+}
+
+.couple-intro__text {
+  padding-top: 50px;
+  padding-bottom: 50px;
+
+  &__title {
+    text-align: center;
+    padding-bottom: 30px;
+
+    color: #000;
+    font-size: 46px;
+    text-shadow: 1px 1px 1px #000;
+    font-family: "Satisfy", cursive;
+  }
+
+  &__description {
+    text-align: center;
+
+    color: #000;
+    font-size: 26px;
+    text-shadow: 1px 1px 1px #000;
+    font-family: "Satisfy", cursive;
+  }
 }
