--- a/src/components/information/information.scss
+++ b/src/components/information/information.scss
@@ -57,7 +57,7 @@
 
   &__title {
     font-size: 30px;
-    font-family: 'Satisfy', cursive;
+    font-family: "Alex Brush", cursive;
     padding-bottom: 20px;
   }
 
