Clear form on send

--- a/src/components/rsvp-form/rsvp-form.scss
+++ b/src/components/rsvp-form/rsvp-form.scss
@@ -43,7 +43,8 @@
   margin-bottom: 20px;
 }
 
-.sendButton {
+.sendButton,
+.clearButton {
   margin-top: 20px;
   padding: 10px;
   border: 1px solid #000;
