--- a/src/components/main-menu/main-menu.scss
+++ b/src/components/main-menu/main-menu.scss
@@ -22,6 +22,7 @@
   height: 61px;
 
   border-bottom: 1px solid #e5e5e5;
+  pointer-events: all;
 }
 
 .main-menu__bar__hamburger {
@@ -61,6 +62,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  pointer-events: all;
 
   &.visible {
     opacity: 0.8;
