Switch to font matching design

--- a/src/components/countdown/countdown.scss
+++ b/src/components/countdown/countdown.scss
@@ -24,7 +24,8 @@
   padding: 10px 0;
 
   font-size: 30px;
-  font-family: "Satisfy", cursive;
+  font-family: "Karla", cursive;
+  font-weight: bold;
   text-align: center;
 }
 
