--- a/src/components/cover/cover.scss
+++ b/src/components/cover/cover.scss
@@ -67,7 +67,8 @@
       color: white;
       font-size: 60px;
       text-shadow: 1px 1px 1px #000;
-      font-family: "Alex Brush", cursive;
+      font-family: "Karla", cursive;
+      font-weight: bold;
 
       padding-bottom: 20px;
     }
@@ -78,7 +79,7 @@
       color: white;
       font-size: 30px;
       text-shadow: 1px 1px 1px #000;
-      font-family: "Satisfy", cursive;
+      font-family: "Lora", cursive;
     }
   }
 }
