--- a/src/components/rsvp-form/rsvp-form.scss
+++ b/src/components/rsvp-form/rsvp-form.scss
@@ -25,7 +25,9 @@
 
   .title {
     font-size: 30px;
-    font-family: "Alex Brush", cursive;
+    font-family: "Karla", cursive;
+    font-weight: bold;
+
     padding-bottom: 20px;
   }
 
