--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,19 +1,15 @@
 // Font family
 $font-family--fallback: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-$font-family--global: "Satisfy", $font-family--fallback;
+$font-family--global: "Lora", $font-family--fallback;
 
 $colors: (
-  'background':     rgba(255, 255, 255, 1),
-  'grey':           rgba(33, 33, 33, 0.2),
-  'dark-grey':      rgba(33, 33, 33, 0.8),
-  'black':          rgba(0, 0, 0, 1),
-  'white':          rgba(255, 255, 255, 1),
-  'blue':           #0053ba,
-  'dark-blue':      #0053ba,
+  'timeline-background':       rgba(#B0DDD7, 1),
+  'timeline-color':       rgba(#142E4B, 1),
 );
 
 /* Color variables */
-$main-application-background: map-get($colors, 'background');
+$timeline-background: map-get($colors, 'timeline-background');
+$timeline-color: map-get($colors, 'timeline-color');
 
 /* Mixins */
 @function color($key) {
@@ -57,6 +53,14 @@ html {
   overflow-x: hidden;
   overflow-y: scroll;
 }
+
+//**************
+// Title:
+// Karla, bold
+//**************
+// Body:
+// Lora, regular
+//**************
 
 /* CSS RESETS */
 
@@ -137,31 +141,6 @@ html {
 
 ul {
   padding-left: 20px;
-}
-
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
-  display: inline-block;
-  line-height: 0.5;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
-
-  /* Support for all WebKit browsers. */
-  -webkit-font-smoothing: antialiased;
-  /* Support for Safari and Chrome. */
-  text-rendering: optimizeLegibility;
-
-  /* Support for Firefox. */
-  -moz-osx-font-smoothing: grayscale;
-
-  /* Support for IE. */
-  font-feature-settings: 'liga';
 }
 
 button {
