--- a/src/components/timeline/timeline.scss
+++ b/src/components/timeline/timeline.scss
@@ -9,10 +9,9 @@
   height: auto;
 
   background-color: $timeline-background;
-  color: $timeline-color;
 }
 
-.timeline__content {
+.timeline .timeline__content {
   width: 100%;
   min-height: 100vh;
   height: auto;
@@ -24,32 +23,33 @@
 
   padding-top: 80px;
   padding-bottom: 60px;
+
+  .header {
+    flex: 1 100%;
+
+    width: 100%;
+    text-align: center;
+    padding-bottom: 30px;
+
+    &__title {
+      font-size: 40px;
+      font-family: "Karla", cursive;
+      font-weight: bold;
+      color: $timeline-title;
+
+      margin-bottom: 20px;
+    }
+
+    &__subtitle {
+      font-size: 36px;
+      font-family: "Karla", cursive;
+      font-weight: bold;
+      color: $timeline-subtitle;
+    }
+  }
 }
 
-.timeline__content__header {
-  flex: 1 100%;
-
-  width: 100%;
-  text-align: center;
-  padding-bottom: 30px;
-
-  &__title {
-    font-size: 40px;
-    font-family: "Karla", cursive;
-    font-weight: bold;
-    color: $timeline-color;
-
-    margin-bottom: 20px;
-  }
-
-  &__subtitle {
-    font-size: 26px;
-    font-family: "Lora", cursive;
-    color: $timeline-color;
-  }
-}
-
-.timeline__content__item {
+.timeline .item {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -61,59 +61,60 @@
   &:not(last-item) {
     padding: 30px;
   }
-}
 
-.timeline__content__item__image {
-  position: relative;
-  width: 200px;
-  height: 200px;
-
-  &__asset {
+  &__image {
+    position: relative;
     width: 200px;
     height: 200px;
-    border-radius: 50%;
 
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: darken(#E3E3E3, 20%);
-  }
-}
+    &__asset {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
 
-.timeline__content__item__text {
-  padding-top: 20px;
-
-  &__title {
-    font-size: 30px;
-    font-family: "Karla", cursive;
-    font-weight: bold;
-    color: $timeline-color;
-
-    padding-bottom: 20px;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-color: darken(#E3E3E3, 20%);
+    }
   }
 
-  &__description {
-    position: relative;
-    color: $timeline-color;
-  }
-}
+  &__text {
+    padding-top: 20px;
 
-@media (min-width: 600px) {
-  .timeline__content__item {
-    flex-direction: row;
-    align-items: start;
-    justify-content: start;
+    &__title {
+      font-size: 30px;
+      font-family: "Karla", cursive;
+      font-weight: bold;
+      color: $timeline-title;
+
+      padding-bottom: 20px;
+    }
+
+    &__description {
+      position: relative;
+    }
   }
 }
 
 @media (min-width: 600px) {
-  .timeline__content__item__text {
-    padding-left: 60px;
+  .timeline__content {
+    .item {
+      flex-direction: row;
+      align-items: start;
+      justify-content: start;
+    }
+
+    .item__text {
+      padding-left: 60px;
+    }
   }
 }
 
 @media (min-width: 800px) {
-  .timeline__content__item {
-    max-width: 800px;
+  .timeline__content {
+    .item {
+      max-width: 800px;
+    }
   }
 }
