--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,13 +3,15 @@ $font-family--fallback: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto",
 $font-family--global: "Lora", $font-family--fallback;
 
 $colors: (
-  'timeline-background':       rgba(#B0DDD7, 1),
-  'timeline-color':       rgba(#142E4B, 1),
+  'timeline-background':    rgba(#102032, 1),
+  'timeline-title':         rgba(#F9C9C8, 1),
+  'timeline-subtitle':      rgba(#FFFFFF, 1),
 );
 
 /* Color variables */
 $timeline-background: map-get($colors, 'timeline-background');
-$timeline-color: map-get($colors, 'timeline-color');
+$timeline-title: map-get($colors, 'timeline-title');
+$timeline-subtitle: map-get($colors, 'timeline-subtitle');
 
 /* Mixins */
 @function color($key) {
