--- a/src/components/information/information.scss
+++ b/src/components/information/information.scss
@@ -3,7 +3,6 @@
 
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   height: auto;
 
   background-color: white;
@@ -11,10 +10,10 @@
 
 .information__content {
   width: 100%;
-  min-height: 100vh;
   height: auto;
 
   padding-top: 60px;
+  padding-bottom: 60px;
 
   display: flex;
   flex-direction: column;
@@ -23,6 +22,9 @@
 }
 
 .contentItem {
+  flex: 1;
+  flex-grow:1;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,6 +56,7 @@
 }
 
 .contentItem__metadata {
+  flex: 1;
   padding-top: 20px;
 
   &__title {
