--- a/src/components/rsvp-form/rsvp-form.scss
+++ b/src/components/rsvp-form/rsvp-form.scss
@@ -23,9 +23,7 @@
   justify-content: center;
 
   .title {
-    font-size: 30px;
-    font-family: "Karla", cursive;
-    font-weight: bold;
+    @include title;
 
     padding-bottom: 40px;
   }
@@ -42,9 +40,9 @@
       margin-bottom: 10px;
 
       .label {
+        @include title;
         font-size: 16px;
-        font-family: "Karla", cursive;
-        font-weight: bold;
+
         margin-bottom: 6px;
       }
 
@@ -67,9 +65,9 @@
     margin-bottom: 20px;
 
     .label {
+      @include title;
       font-size: 16px;
-      font-family: "Karla", cursive;
-      font-weight: bold;
+
       margin-bottom: 6px;
     }
 
@@ -93,9 +91,9 @@
     }
 
     .label {
+      @include title;
       font-size: 16px;
-      font-family: "Karla", cursive;
-      font-weight: bold;
+
       margin-bottom: 6px;
     }
 
@@ -114,8 +112,9 @@
       margin-top: 20px;
       padding: 6px 12px;
       border-radius: 16px;
-      font-family: "Karla", cursive;
-      font-weight: bold;
+
+      @include title;
+      font-size: 16px;
 
       &:not(:last-child) {
         margin-right: 10px;
