--- a/src/components/couple-intro/couple-intro.scss
+++ b/src/components/couple-intro/couple-intro.scss
@@ -1,3 +1,5 @@
+@import "../../styles/global.scss";
+
 .couple-intro {
   position: relative;
 
@@ -6,12 +8,12 @@
   align-items: center;
   justify-content: center;
 
-  min-height: 100vh;
   height: auto;
 
   padding-top: 50px;
+  padding-bottom: 50px;
 
-  background-color: white;
+  background-color: $coupleIntro-background;
 
   .couples {
     display: flex;
@@ -56,26 +58,6 @@
       font-family: "Alex Brush", cursive;
     }
   }
-
-  .countdown {
-    width: 100%;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    text-align: center;
-
-    &__title {
-      margin-top: 40px;
-      font-size: 40px;
-      font-family: "Karla", cursive;
-      font-weight: bold;
-
-      color: #B0DDD7;
-    }
-  }
 }
 
 @media (min-width: 800px) {
@@ -87,10 +69,6 @@
         padding-left: 25px;
         padding-right: 25px;
       }
-    }
-
-    .countdown__title {
-      margin-top: 60px;
     }
   }
 }
