--- a/src/components/timeline/timeline.scss
+++ b/src/components/timeline/timeline.scss
@@ -5,7 +5,6 @@
 
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   height: auto;
 
   background-color: $timeline-background;
@@ -13,7 +12,6 @@
 
 .timeline .timeline__content {
   width: 100%;
-  min-height: 100vh;
   height: auto;
 
   display: flex;
@@ -32,18 +30,15 @@
     padding-bottom: 30px;
 
     &__title {
+      @include title;
       font-size: 40px;
-      font-family: "Karla", cursive;
-      font-weight: bold;
       color: $timeline-title;
 
       margin-bottom: 20px;
     }
 
     &__subtitle {
-      font-size: 36px;
-      font-family: "Karla", cursive;
-      font-weight: bold;
+      @include title;
       color: $timeline-subtitle;
     }
   }
@@ -83,9 +78,7 @@
     padding-top: 20px;
 
     &__title {
-      font-size: 30px;
-      font-family: "Karla", cursive;
-      font-weight: bold;
+      @include title;
       color: $timeline-title;
 
       padding-bottom: 20px;
