--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,8 +1,12 @@
+@import "./reset.scss";
+
 // Font family
 $font-family--fallback: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 $font-family--global: "Lora", $font-family--fallback;
 
 $colors: (
+  'coupleIntro-background':    rgba(#F9D6C8, 1),
+
   'timeline-background':    rgba(#102032, 1),
   'timeline-title':         rgba(#F9C9C8, 1),
   'timeline-subtitle':      rgba(#FFFFFF, 1),
@@ -11,6 +15,8 @@ $colors: (
 );
 
 /* Color variables */
+$coupleIntro-background: map-get($colors, 'coupleIntro-background');
+
 $timeline-background: map-get($colors, 'timeline-background');
 $timeline-title: map-get($colors, 'timeline-title');
 $timeline-subtitle: map-get($colors, 'timeline-subtitle');
@@ -38,6 +44,21 @@ $z-index: (
   z-index: z-index($key);
 }
 
+//**************
+// Title:
+// Karla, bold
+//**************
+// Body:
+// Lora, regular
+//**************
+
+@mixin title {
+  font-size: 30px;
+  font-family: "Karla", cursive;
+  font-weight: bold;
+  line-height: 1;
+}
+
 html,
 body {
   position: absolute;
@@ -47,9 +68,9 @@ body {
   left: 0;
   padding: 0;
   margin: 0;
-  font-family: $font-family--global;
+  font-family: "Lora", cursive, $font-family--global;
   letter-spacing: 1px;
-  line-height: 1;
+  line-height: 1.5;
   color: color('black');
   background-color: color('background');
   @include z-index(root);
@@ -85,129 +106,7 @@ html {
   font-feature-settings: "liga";
 }
 
-//**************
-// Title:
-// Karla, bold
-//**************
-// Body:
-// Lora, regular
-//**************
-
-/* CSS RESETS */
-
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-
-body {
-	line-height: 1;
-}
-
-ol, ul {
-	list-style: none;
-}
-
-blockquote, q {
-	quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-input:focus {
-  outline: none;
-}
-
-html {
-  box-sizing: border-box;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
 * {
   -webkit-font-smoothing: antialiased;
-  -webkit-text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
-  text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
-}
-
-ul {
-  padding-left: 20px;
-}
-
-button {
-  border: none;
-  margin: 0;
-  padding: 0;
-  width: auto;
-  overflow: visible;
-
-  background: transparent;
-  outline: none;
-
-  /* inherit font & color from ancestor */
-  color: inherit;
-  font: inherit;
-
-  /* Normalize `line-height`. Cannot be changed from `normal` in Firefox 4+. */
-  line-height: normal;
-
-  /* Corrects font smoothing for webkit */
-  -webkit-font-smoothing: inherit;
-  -moz-osx-font-smoothing: inherit;
-
-  /* Corrects inability to style clickable `input` types in iOS */
-  -webkit-appearance: none;
-
-  cursor: pointer;
-}
-
-/* Remove excess padding and border in Firefox 4+ */
-button::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+  -moz-osx-font-smoothing: grayscale;
 }
