--- a/src/components/cover/cover.scss
+++ b/src/components/cover/cover.scss
@@ -5,6 +5,22 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+
+  &__logo {
+    @include z-index(logo);
+
+    position: absolute;
+    height: 100%;
+    width: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &__content {
+      margin-top: 80px;
+    }
+  }
 }
 
 .cover__background {
@@ -16,7 +32,7 @@
   height: 100%;
   min-height: 100vh;
 
-  background-image: url("../../assets/cover.jpg");
+  background-image: url("../../assets/header-large.jpg");
 
   /* Background image is centered vertically and horizontally at all times */
   background-position: center center;
@@ -45,40 +61,4 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
-
-  background: rgba(0, 0, 0, 0.3);
-}
-
-.cover__content {
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  width: 100%;
-  height: 100%;
-  min-height: 100vh;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  &__metadata {
-    &__title {
-      text-align: center;
-
-      @include title;
-      color: white;
-      font-size: 60px;
-
-      padding-bottom: 20px;
-    }
-
-    &__description {
-      text-align: center;
-
-      color: white;
-      font-size: 30px;
-      font-family: "Lora", cursive;
-    }
-  }
 }
