--- a/src/components/information/information.scss
+++ b/src/components/information/information.scss
@@ -21,6 +21,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  .header {
+    .title {
+      @include title;
+      font-size: 40px;
+      color: $information-title;
+    }
+  }
 }
 
 .contentItem {
@@ -33,7 +41,6 @@
   justify-content: center;
 
   position: relative;
-  color: black;
 
   &:not(last-item) {
     padding: 30px;
@@ -110,6 +117,10 @@
     flex-direction: row;
     align-items: start;
     justify-content: start;
+
+    .contentItem__metadata {
+      padding-top: 0;
+    }
 
     &:nth-child(odd) {
       .contentItem__image {
