--- a/src/components/rsvp-form/rsvp-form.scss
+++ b/src/components/rsvp-form/rsvp-form.scss
@@ -5,6 +5,9 @@
 
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
   height: auto;
 
   background-color: $rsvp-background;
@@ -14,6 +17,7 @@
   width: 100%;
   height: auto;
 
+  padding: 20px;
   padding-top: 60px;
   padding-bottom: 60px;
 
@@ -29,6 +33,8 @@
   }
 
   .userData {
+    width: 100%;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,6 +43,7 @@
     margin-bottom: 20px;
 
     .inputContainer {
+      width: 100%;
       margin-bottom: 10px;
 
       .label {
@@ -48,7 +55,7 @@
 
       .input {
         width: 100%;
-        min-width: 560px;
+
         padding: 16px;
         border-radius: 5px;
         border: none;
@@ -58,6 +65,8 @@
   }
 
   .isAttending {
+    width: 100%;
+
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -73,7 +82,6 @@
 
     .input {
       width: 100%;
-      min-width: 560px;
       padding: 16px;
       border-radius: 5px;
       border: none;
@@ -82,6 +90,8 @@
   }
 
   .bigField {
+    width: 100%;
+
     padding-bottom: 20px;
 
     &--extended {
@@ -99,7 +109,6 @@
 
     .input {
       width: 100%;
-      min-width: 560px;
       padding: 16px;
       border-radius: 5px;
       border: none;
@@ -108,10 +117,19 @@
   }
 
   .buttons {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
     .button {
+      width: 100%;
+
       margin-top: 20px;
-      padding: 6px 12px;
-      border-radius: 16px;
+      padding: 20px 60px;
+      border-radius: 30px;
 
       @include title;
       font-size: 16px;
@@ -153,4 +171,31 @@
 		-webkit-transform: translateY(-5px);
 		transform: translateY(-5px);
 	}
+}
+
+@media (min-width: 600px) {
+  .rsvp-form {
+    .content {
+      max-width: 560px;
+
+      .buttons {
+        width: auto;
+        flex-direction: row;
+
+        .button {
+          padding: 12px 24px;
+          border-radius: 24px;
+          white-space: nowrap;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1000px) {
+  .rsvp-form {
+    .content {
+      max-width: 660px;
+    }
+  }
 }
