--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,21 +5,29 @@ $font-family--fallback: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto",
 $font-family--global: "Lora", $font-family--fallback;
 
 $colors: (
-  'coupleIntro-background':    rgba(#F9D6C8, 1),
+  'main-fontColor':             rgba(#142E4B, 1),
 
-  'timeline-background':    rgba(#102032, 1),
-  'timeline-title':         rgba(#F9C9C8, 1),
-  'timeline-subtitle':      rgba(#FFFFFF, 1),
+  'coupleIntro-background':     rgba(#F9D6C8, 1),
 
-  'rsvp-background':        rgba(#B0DDD7, 1),
+  'timeline-background':        rgba(#B0DDD7, 1),
+  'timeline-title':             rgba(#FFFFFF, 1),
+  'timeline-subtitle':          rgba(#142E4B, 1),
+
+  'information-title':          rgba(#ED3124, 1),
+
+  'rsvp-background':            rgba(#B0DDD7, 1),
 );
 
 /* Color variables */
+$main-fontColor: map-get($colors, 'main-fontColor');
+
 $coupleIntro-background: map-get($colors, 'coupleIntro-background');
 
 $timeline-background: map-get($colors, 'timeline-background');
 $timeline-title: map-get($colors, 'timeline-title');
 $timeline-subtitle: map-get($colors, 'timeline-subtitle');
+
+$information-title: map-get($colors, 'information-title');
 
 $rsvp-background: map-get($colors, 'rsvp-background');
 
@@ -31,7 +39,10 @@ $rsvp-background: map-get($colors, 'rsvp-background');
 /* Z-index landscape */
 $z-index: (
   spinner             : 100,
+  overlay             : 100,
+  menu-bar            : 101,
   menu                : 50,
+  logo                : 10,
   root                : 0,
   behind              : -1,
 );
@@ -71,7 +82,7 @@ body {
   font-family: "Lora", cursive, $font-family--global;
   letter-spacing: 1px;
   line-height: 1.5;
-  color: color('black');
+  color: color('main-fontColor');
   background-color: color('background');
   @include z-index(root);
 }
